// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Allow display to return value it is displaying 1`] = `
Object {
  "status": "finished",
  "value": 50,
}
`;

exports[`Arrays toString matches up with JS 1`] = `
Object {
  "status": "finished",
  "value": "1,2",
}
`;

exports[`Arrow function definition returns itself 1`] = `
Object {
  "status": "finished",
  "value": [Function],
}
`;

exports[`Arrow function definition returns itself 2`] = `[Function]`;

exports[`Arrow function infinite recursion with list args represents CallExpression well 1`] = `
"Line 2: Infinite recursion
  f([1, [2, null]])..  f([1, [2, null]])..  f([1, [2, null]]).."
`;

exports[`Builtins hide their implementation 1`] = `
Object {
  "status": "finished",
  "value": "function pair(x, xs) {
	[implementation hidden]
}",
}
`;

exports[`Builtins hide their implementation 2`] = `
Object {
  "status": "finished",
  "value": "function pair(x, xs) {
	[implementation hidden]
}",
}
`;

exports[`Cannot overwrite consts even when assignment is allowed 1`] = `"Line 4: Cannot assign new value to constant constant"`;

exports[`Deep object assignment and retrieval 1`] = `
Object {
  "status": "finished",
  "value": "string",
}
`;

exports[`Empty code returns undefined 1`] = `
Object {
  "status": "finished",
  "value": undefined,
}
`;

exports[`Factorial arrow function 1`] = `
Object {
  "status": "finished",
  "value": 120,
}
`;

exports[`Function infinite recursion with list args represents CallExpression well 1`] = `
"Line 2: Infinite recursion
  f([1, [2, null]])..  f([1, [2, null]])..  f([1, [2, null]]).."
`;

exports[`Objects toString matches up with JS 1`] = `
Object {
  "status": "finished",
  "value": "[object Object]",
}
`;

exports[`Simple arrow function infinite recursion represents CallExpression well 1`] = `
"Line 1: Infinite recursion
  x(x => x(x)(x))..  x(x => x(x)(x))..  x(x => x(x)(x)).."
`;

exports[`Simple function infinite recursion represents CallExpression well 1`] = `
"Line 1: Infinite recursion
  x(function f(x) {
  return x(x)(x);
})..  x(function f(x) {
  return x(x)(x);
})..  x(function f(x) {
  return x(x)(x);
}).."
`;

exports[`Simple object assignment and retrieval 1`] = `
Object {
  "status": "finished",
  "value": 1,
}
`;

exports[`Single boolean self-evaluates to itself 1`] = `
Object {
  "status": "finished",
  "value": true,
}
`;

exports[`Single number self-evaluates to itself 1`] = `
Object {
  "status": "finished",
  "value": 42,
}
`;

exports[`Single string self-evaluates to itself 1`] = `
Object {
  "status": "finished",
  "value": "42",
}
`;

exports[`false if with empty else works 1`] = `
Object {
  "status": "finished",
  "value": undefined,
}
`;

exports[`false if with nonempty if works 1`] = `
Object {
  "status": "finished",
  "value": 2,
}
`;

exports[`functions toString (mostly) matches up with JS 1`] = `
Object {
  "status": "finished",
  "value": "a => bfunction f(x) {
  return 5;
}",
}
`;

exports[`parseError for missing semicolon 1`] = `"Line 1: Missing semicolon at the end of statement"`;

exports[`primitives toString matches up with JS 1`] = `
Object {
  "status": "finished",
  "value": "truefalse11.5nullundefinedNaN",
}
`;

exports[`test && shortcircuiting 1`] = `
Object {
  "status": "finished",
  "value": false,
}
`;

exports[`test || shortcircuiting 1`] = `
Object {
  "status": "finished",
  "value": true,
}
`;

exports[`test false && false 1`] = `
Object {
  "status": "finished",
  "value": false,
}
`;

exports[`test false && true 1`] = `
Object {
  "status": "finished",
  "value": false,
}
`;

exports[`test false || false 1`] = `
Object {
  "status": "finished",
  "value": false,
}
`;

exports[`test false || true 1`] = `
Object {
  "status": "finished",
  "value": true,
}
`;

exports[`test false conditional expression 1`] = `
Object {
  "status": "finished",
  "value": false,
}
`;

exports[`test true && false 1`] = `
Object {
  "status": "finished",
  "value": false,
}
`;

exports[`test true && true 1`] = `
Object {
  "status": "finished",
  "value": true,
}
`;

exports[`test true || false 1`] = `
Object {
  "status": "finished",
  "value": true,
}
`;

exports[`test true || true 1`] = `
Object {
  "status": "finished",
  "value": true,
}
`;

exports[`test true conditional expression 1`] = `
Object {
  "status": "finished",
  "value": true,
}
`;

exports[`true if with empty if works 1`] = `
Object {
  "status": "finished",
  "value": undefined,
}
`;

exports[`true if with nonempty if works 1`] = `
Object {
  "status": "finished",
  "value": 1,
}
`;
